# AinaNeesColomina_Portfolio

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
src/: engine.cpp  main.cpp
src/Commands/: CommandManager.cpp  CommandManager.h  ProjectManager.cpp  ProjectManager.h
src/Engine/: Engine.cpp  Engine.h
src/Utils/: Utils.h
web/: index.html  script.js  style.css
